# powerinfer

./: .gitignore  CMakeLists.txt  README.md  ggml-cuda.cu  ggml-cuda.h  ggml.c  ggml.h  llama.cpp  llama.h  llama_.cpp  llama_rdma.cpp  llama_rdma_client.cpp  llama_rdma_server.cpp
RDMA/: client.cpp
ReluLLaMA-7B/activation/: activation_0.pt  activation_1.pt  activation_10.pt  activation_11.pt  activation_12.pt  activation_13.pt  activation_14.pt  activation_15.pt  activation_16.pt  activation_17.pt  activation_18.pt  activation_19.pt  activation_2.pt  activation_20.pt  activation_21.pt  activation_22.pt  activation_23.pt  activation_24.pt  activation_25.pt  activation_26.pt  activation_27.pt  activation_28.pt  activation_29.pt  activation_3.pt  activation_30.pt  activation_31.pt  activation_4.pt  activation_5.pt  activation_6.pt  activation_7.pt  activation_8.pt  activation_9.pt
examples/benchmark/: benchmark-matmult.cpp
examples/main/: CMakeLists.txt  main_client.cpp
rdma-example/: CMakeCache.txt  CMakeLists.txt  README.md
rdma-example/src/: rdma_aware.cpp  rdma_client_LLM.c  rdma_client_LLM.cpp  rdma_client_LLM_API.cpp  rdma_client_LLM_API_mqp copy.cpp  rdma_client_LLM_API_mqp.cpp  rdma_client_graph.cpp  rdma_common.cpp  rdma_common.h  rdma_server_LLM.c  rdma_server_LLM.cpp  rdma_server_LLM_API.cpp  rdma_server_LLM_API_mqp.cpp  rdma_server_graph.cpp
tests/: CMakeLists.txt  test-c.c  test-c.cpp  test-c_1.cpp
